// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-icon> Component basic usage 1`] = `
<bolt-icon name="add-open"
           size="medium"
           color="teal"
           background="square"
>
  <span class="c-bolt-icon c-bolt-icon--add-open c-bolt-icon--medium c-bolt-icon--teal has-background has-square-background">
    <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
         xmlns="http://www.w3.org/2000/svg"
         viewbox="0 0 24 24"
    >
      <g fill="none"
         fill-rule="evenodd"
      >
        <path>
        </path>
        <g fill="var(--bolt-theme-icon, currentColor)">
          <path d="M12 21a9 9 0 110-18 9 9 0 010 18m0-20a11 11 0 100 22 11 11 0 000-22M16 11h-3V8c0-.5-.4-1-1-1a1 1 0 00-1 1v3H8a1 1 0 00-1 1c0 .6.5 1 1 1h3v3c0 .6.4 1 1 1s1-.4 1-1v-3h3c.6 0 1-.4 1-1s-.4-1-1-1">
          </path>
        </g>
      </g>
    </svg>
    <span class="c-bolt-icon__background-shape c-bolt-icon__background-shape--square">
    </span>
  </span>
</bolt-icon>
`;

exports[`<bolt-icon> Component basic usage with attributes 1`] = `
<bolt-icon style="--bolt-theme-icon-background: #e64b18; --bolt-theme-icon: #FFF; --bolt-theme-icon-background-opacity: 1;"
           name="add-open"
           size="medium"
           color="teal"
           background="square"
>
  <span class="c-bolt-icon c-bolt-icon--add-open c-bolt-icon--medium c-bolt-icon--teal has-background has-square-background">
    <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
         xmlns="http://www.w3.org/2000/svg"
         viewbox="0 0 24 24"
    >
      <g fill="none"
         fill-rule="evenodd"
      >
        <path>
        </path>
        <g fill="var(--bolt-theme-icon, currentColor)">
          <path d="M12 21a9 9 0 110-18 9 9 0 010 18m0-20a11 11 0 100 22 11 11 0 000-22M16 11h-3V8c0-.5-.4-1-1-1a1 1 0 00-1 1v3H8a1 1 0 00-1 1c0 .6.5 1 1 1h3v3c0 .6.4 1 1 1s1-.4 1-1v-3h3c.6 0 1-.4 1-1s-.4-1-1-1">
          </path>
        </g>
      </g>
    </svg>
    <span class="c-bolt-icon__background-shape c-bolt-icon__background-shape--square">
    </span>
  </span>
</bolt-icon>
`;
